--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 **/target/
 
 **/nbproject/
+Tuesday/.DS_Store
+Tuesday/tuesdayJoke/.DS_Store
+Wednesday/.DS_Store
+Wednesday/wednesdayJoke/.DS_Store
